# stock

./: .gitignore  README.md  pyproject.toml
src/model/: model_pytorch.py
src/stock/: __init__.py  main.py  test.py
